<resources>
    <string name="app_name">chatbot trial</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="register">Register</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="age">Age</string>
    <string name="height_in_cms">Height (in cms)</string>
    <string name="weight_in_kgs">Weight (in kgs)</string>
    <string name="pcos_pcod">PCOS/PCOD</string>
    <string name="diabetes">Diabetes</string>
    <string name="thyroid">Thyroid</string>
    <string name="what_condition_do_you_have">What condition do you have?</string>
    <string name="weight_loss">Weight loss</string>
    <string name="weight_gain">Weight gain</string>
    <string name="maintaining_weight">Maintaining Weight</string>
    <string name="what_brings_you_here">What brings you here?</string>
</resources>